# effective-mobile-test-work

./: .gitignore  Docker-compose.yaml  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt  template.env
.github/workflows/: ci.yml
src/: main.py
src/api/: __init__.py  admin_handlers.py  auth_handlers.py  exceprion_handlers.py  user_handlers.py
src/core/: database.py  db_connect.py  settings.py
src/exceptions/: auth_exceptions.py  user_exceptions.py
src/models/: user_model.py
src/repositories/: auth_repository.py  user_repository.py
src/schemas/: admin_schemas.py  mixins.py  user_schema.py  user_schemas.py
src/services/: admin_service.py  logger.py  profile_service.py  user_schema.py  user_service.py
src/tests/: conftest.py  test_admin_handlers.py  test_auth_handlers.py  test_user_handlers.py
src/utils/: auth.py  require_admin.py
