[project]
name = "effective-mobile-test-work"
version = "0.1.0"
description = "this is test work for effective-mobile company"
authors = [
    {name = "tursunov-r",email = "tursunov.rus.developer@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.138.1,<0.139.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "jose (>=1.0.0,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "greenlet (>=3.5.2,<4.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "bcrypt (<4.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "slowapi (>=0.1.10,<0.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.13,<4.0"
